sass_responsive-revision

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -32,126 +32,188 @@
 
     <!-- menu -->
         <section id="menu">
+          <div class="menu">
             <div class="menu_top">
                 <h2 class="menu_top_title">La note enchantée</h2>
                 <span class="heart">
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes menu_dishes--1">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Ravioles de foie gras</h3>
-                                <p class="dish_subtitle">Accompagnés de leur crème à la truffe</p>
-                            </div>
-                            <div class="dish_price">25€</div>
+            <div class="menu__grid">
+                <div class="menu__grid__bloc">
+                  <div class="menu__grid__title"><h3>entrées</h3></div>
+                   <div class="menu__grid__case menu__grid__case--1">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Ravioles de foie gras</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Accompagnés de leur crème à la truffe</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--2">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Caviar osciètre</h3>
-                                <p class="dish_subtitle">Sur blini à la farine de blé noir</p>
-                            </div>
-                            <div class="dish_price">35€</div>
+                      </div>
+                      <div class="menu__case__price">25€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--2">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Caviar osciètre</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Sur blini à la farine de blé noir</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--3">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Homard et espuma de potiron</h3>
-                                <p class="dish_subtitle">Mariné aux zestes d'orange</p>
-                            </div>
-                            <div class="dish_price">20€</div>
+                      </div>
+                      <div class="menu__case__price">35€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--3">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Homard et espuma de potiron</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Mariné aux zestes d'orange</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--4">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Foie gras de canard cuit entier</h3>
-                                <p class="dish_subtitle">Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="dish_price">35€</div>
+                      </div>
+                      <div class="menu__case__price">20€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--4">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Foie gras de canard cuit entier</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Confiture de figue et pain toasté</p>
                         </div>
+                      </div>
+                      <div class="menu__case__price">35€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes menu_dishes--5">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Noix de coquilles Saint-Jacques</h3>
-                                <p class="dish_subtitle">Sur lit de purée de céleri-rave</p>
-                            </div>
-                            <div class="dish_price">40€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--6">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Langoustine poêlée</h3>
-                                <p class="dish_subtitle">Purée de patate douce</p>
-                            </div>
-                            <div class="dish_price">35€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--7">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Mijoté de queue de boeuf</h3>
-                                <p class="dish_subtitle">Et riz sauvage aux zestes de citron</p>
-                            </div>
-                            <div class="dish_price">44€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>plats</h3></div>
+                 <div class="menu__grid__case menu__grid__case--5">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Noix de coquilles Saint-Jacques</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Sur lit de purée de céleri-rave</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">40€</div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes menu_dishes--8">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Macaron noisette et chocolat</h3>
-                                <p class="dish_subtitle">Glace au caramel brun et sel de Guérande</p>
-                            </div>
-                            <div class="dish_price">18€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--9">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Baba au rhum revisité</h3>
-                                <p class="dish_subtitle">Avec son coulis de citron</p>
-                            </div>
-                            <div class="dish_price">22€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--10">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Tarte au citron meringuée</h3>
-                                <p class="dish_subtitle">Déstructurée</p>
-                            </div>
-                            <div class="dish_price">23€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
                 </div>
-            </div>
+                <div class="menu__grid__case menu__grid__case--6">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Langoustine poêlée</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Purée de patate douce</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">35€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--7">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Mijoté de queue de boeuf</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et riz sauvage aux zestes de citron</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">44€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+               <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>desserts</h3></div>
+                 <div class="menu__grid__case menu__grid__case--8">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Macaron noisette et chocolat</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">18€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--9">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Baba au rhum revisité</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Avec son coulis de citron</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">22€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--10">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Tarte au citron meringuée</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Déstructurées</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">23€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+              </div>
             <div class="menu_button">
                 <button class="menu_button_order" id="order_button">Commander</button>
             </div>
+        </div>
         </section>
 
     <!-- footer -->
