--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -32,116 +32,172 @@
 
     <!-- menu -->
         <section id="menu">
+          <div class="menu">
             <div class="menu_top">
                 <h2 class="menu_top_title">Le délice des sens</h2>
                 <span class="heart">
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <div class="menu_bloc">
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes menu_dishes--1">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Tartare de thon</h3>
-                                <p class="dish_subtitle">Assaisonné au yuzu</p>
-                            </div>
-                            <div class="dish_price">25€</div>
+            <div class="menu__grid">
+                <div class="menu__grid__bloc">
+                  <div class="menu__grid__title"><h3>entrées</h3></div>
+                   <div class="menu__grid__case menu__grid__case--1">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Tartare de thon</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Assaisonné au yuzu</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--2">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Bouchée de homard croustillant</h3>
-                                <p class="dish_subtitle">Et sa farandole de petits légumes</p>
-                            </div>
-                            <div class="dish_price">35€</div>
+                      </div>
+                      <div class="menu__case__price">25€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--2">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Bouchée de homard croustillant</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Et sa farandole de petits légumes</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--3">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Velouté de cèpes</h3>
-                                <p class="dish_subtitle">Aux truffes</p>
-                            </div>
-                            <div class="dish_price">20€</div>
+                      </div>
+                      <div class="menu__case__price">35€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--3">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Velouté de cèpes</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Aux truffes</p>
                         </div>
+                      </div>
+                      <div class="menu__case__price">20€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes menu_dishes--4">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Poulet rôti aux herbes de Provence</h3>
-                                <p class="dish_subtitle">Et sa crème de truffe</p>
-                            </div>
-                            <div class="dish_price">40€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--5">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Langouste rôtie</h3>
-                                <p class="dish_subtitle">Et ses légumes de saison</p>
-                            </div>
-                            <div class="dish_price">35€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--6">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Côte de boeuf Angus</h3>
-                                <p class="dish_subtitle">Et sa purée de panais</p>
-                            </div>
-                            <div class="dish_price">44€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>plats</h3></div>
+                 <div class="menu__grid__case menu__grid__case--4">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Poulet rôti aux herbes de Provence</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et sa crème de truffe</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">40€</div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes menu_dishes--7">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Farandole de desserts</h3>
-                                <p class="dish_subtitle">Du chef</p>
-                            </div>
-                            <div class="dish_price">18€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--8">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Crème brulée</h3>
-                                <p class="dish_subtitle">Revisitée</p>
-                            </div>
-                            <div class="dish_price">22€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--9">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Tiramisu</h3>
-                                <p class="dish_subtitle">À la noisette</p>
-                            </div>
-                            <div class="dish_price">23€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
                 </div>
-            </div>
+                <div class="menu__grid__case menu__grid__case--5">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Langouste rôtie</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et ses légumes de saison</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">35€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--6">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Côte de boeuf Angus</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et sa purée de panais</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">44€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+               <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>desserts</h3></div>
+                 <div class="menu__grid__case menu__grid__case--7">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Farandole de desserts</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Du chef</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">18€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--8">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Crème brulée</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Revisitée</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">22€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--9">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Tiramisu</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>À la noisette</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">23€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+              </div>
             <div class="menu_button">
                 <button class="menu_button_order" id="order_button">Commander</button>
             </div>
+        </div>
         </section>
 
     <!-- footer -->
