--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -31,116 +31,172 @@
 
     <!-- menu -->
         <section id="menu">
+          <div class="menu">
             <div class="menu_top">
                 <h2 class="menu_top_title">À la française</h2>
                 <span class="heart">
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-         <div class="menu_bloc">
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes menu_dishes--1">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Tartare de poulpe acidulé</h3>
-                                <p class="dish_subtitle">Aux zestes d'orange</p>
-                            </div>
-                            <div class="dish_price">25€</div>
+            <div class="menu__grid">
+                <div class="menu__grid__bloc">
+                  <div class="menu__grid__title"><h3>entrées</h3></div>
+                   <div class="menu__grid__case menu__grid__case--1">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Tartare de poulpe acidulé</p>
                         </div>
-                            <div class="selection__box">
-                               <i class="fas fa-check-circle"></i>
-                            </div> 
-                        <div class="menu_dishes menu_dishes--2">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Velouté de légumes d'antan</h3>
-                                <p class="dish_subtitle">Carotte, panais, topinambour</p>
-                            </div>
-                            <div class="dish_price">35€</div>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Aux zestes d'orange</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                      </div>
+                      <div class="menu__case__price">25€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--2">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Velouté de légumes d'antan</p>
                         </div>
-                        <div class="menu_dishes menu_dishes--3">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Soupe à l'oignon</h3>
-                                <p class="dish_subtitle">Revisitée</p>
-                            </div>
-                            <div class="dish_price">20€</div>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Carotte, panais, topinambour</p>
                         </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
+                      </div>
+                      <div class="menu__case__price">35€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
+                  <div class="menu__grid__case menu__grid__case--3">
+                    <div class="dish-and-price">
+                      <div class="menu__case__dish">
+                        <div class="menu__case__dish-title">
+                          <p>Soupe à l'oignon</p>
                         </div>
+                        <div class="menu__case__dish-subtitle">
+                          <p>Revisitée</p>
+                        </div>
+                      </div>
+                      <div class="menu__case__price">20€</div>
+                  </div>
+                    <div class="validation__box">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes menu_dishes--4">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Coquilles Saint-Jacques</h3>
-                                <p class="dish_subtitle">Accompagnées d'une purée de panais</p>
-                            </div>
-                            <div class="dish_price">40€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--5">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Magret de canard</h3>
-                                <p class="dish_subtitle">Et parmentier de pommes de terre</p>
-                            </div>
-                            <div class="dish_price">35€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--6">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="dish_subtitle">Sur son lit de gnocchis aux légumes</p>
-                            </div>
-                            <div class="dish_price">44€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>plats</h3></div>
+                 <div class="menu__grid__case menu__grid__case--4">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Coquilles Saint-Jacques</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Accompagnées d'une purée de panais</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">40€</div>
                 </div>
-                <div class="menu_bloc_card">
-                    <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes menu_dishes--7">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Pétales de violettes glacés</h3>
-                                <p class="dish_subtitle">Et purée de noisettes</p>
-                            </div>
-                            <div class="dish_price">18€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--8">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Fondant au chocolat</h3>
-                                <p class="dish_subtitle">Revisité</p>
-                            </div>
-                            <div class="dish_price">22€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu_dishes menu_dishes--9">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Millefeuille croustillant</h3>
-                                <p class="dish_subtitle">Myrtilles et pâte d’amande</p>
-                            </div>
-                            <div class="dish_price">23€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
                 </div>
-            </div>
+                <div class="menu__grid__case menu__grid__case--5">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Magret de canard</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et parmentier de pommes de terre</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">35€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--6">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Pigeonneau d’Ille-et-Vilaine</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">44€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+               <div class="menu__grid__bloc">
+                 <div class="menu__grid__title"><h3>desserts</h3></div>
+                 <div class="menu__grid__case menu__grid__case--7">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Pétales de violettes glacés</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Et purée de noisettes</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">18€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--8">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Fondant au chocolat</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Revisité</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">22€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+                <div class="menu__grid__case menu__grid__case--9">
+                  <div class="dish-and-price">
+                    <div class="menu__case__dish">
+                      <div class="menu__case__dish-title">
+                        <p>Millefeuille croustillant</p>
+                      </div>
+                      <div class="menu__case__dish-subtitle">
+                        <p>Myrtilles et pâte d’amande</p>
+                      </div>
+                    </div>
+                    <div class="menu__case__price">23€</div>
+                </div>
+                  <div class="validation__box">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
+               </div>
+              </div>
             <div class="menu_button">
                 <button class="menu_button_order" id="order_button">Commander</button>
             </div>
+        </div>
         </section>
 
     <!-- footer -->
