--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,9 +19,9 @@
     <!-- header -->
     <header>
         <div class="header">
-            <div class="header_icon"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+            <div class="header_icon"><a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
-            <a href="../index.html"><h1 class="header_logo">ohmyfood</h1></a>
+            <a href="index.html"><h1 class="header_logo">ohmyfood</h1></a>
         </div>
     </header>
 
